syntax = "proto3";

package kessel.inventory.v1beta1.relationships;

import "kessel/inventory/v1beta1/relationships/metadata.proto";
import "kessel/inventory/v1beta1/relationships/reporter_data.proto";
import "kessel/inventory/v1beta1/relationships/policy_relationship_detail.proto";
import "validate/validate.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1/relationships";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1.relationships";

message PolicyRelationship {

  // Metadata about this resource
  Metadata metadata = 1 [ (validate.rules).message = {required: false, skip: false} ];

  // Write only reporter specific data
  ReporterData reporter_data = 245278793 [ (validate.rules).message.required = true ];
  
  PolicyRelationshipDetail relationship_data = 2122699 [ (validate.rules).message.required = true ];
}
